Python/pymath.c
@@ -1,18 +1,5 @@
 #include "Python.h"
 
-#ifdef X87_DOUBLE_ROUNDING
-/* On x86 platforms using an x87 FPU, this function is called from the
-   Py_FORCE_DOUBLE macro (defined in pymath.h) to force a floating-point
-   number out of an 80-bit x87 FPU register and into a 64-bit memory location,
-   thus rounding from extended precision to double precision. */
-double _Py_force_double(double x)
-{
-    volatile double y;
-    y = x;
-    return y;
-}
-#endif
-
 
 #ifdef HAVE_GCC_ASM_FOR_X87
 // Inline assembly for getting and setting the 387 FPU control word on
